add_library(CanaryCSIndex STATIC
        BitVector.cpp
        CSProgressBar.cpp
        DataComp.cpp
        DWGraph.cpp
        DWGraphUtil.cpp
        Grail.cpp
        Graph.cpp
        GraphUtil.cpp
        PathTree.cpp
        PathtreeQuery.cpp
        Query.cpp
        ReachBackbone.cpp
        Tabulation.cpp
        TCSEstimator.cpp
)
